--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
-    <head></head>
+    <head>hello world sup?</head>
 
     <body>
         <h1>This is a Header</h1>
+        <p>This is a paragraph</p>
     </body>
 </html>
