--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html>
-    <head>hello world sup?</head>
+    <head></head>
 
     <body>
         <h1>This is a Header</h1>
-        <p>This is a paragraph</p>
     </body>
 </html>
